<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicapp.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/logosm"/>

    <TextView
        android:id="@+id/artist"
        style="@style/CategoryStyle"
        android:background="@color/category_artist"
        android:text="@string/artist"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/album"
        style="@style/CategoryStyle"
        android:background="@color/category_album"
        android:text="@string/album"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/song"
        style="@style/CategoryStyle"
        android:background="@color/category_song"
        android:text="@string/song"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/category"
        style="@style/CategoryStyle"
        android:background="@color/category_genres"
        android:text="@string/genres"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/dj_playlist"
        style="@style/CategoryStyle"
        android:background="@color/category_dj_playlist"
        android:text="@string/dj_playlist"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/dj_artist"
        style="@style/CategoryStyle"
        android:background="@color/category_dj_artist"
        android:text="@string/dj_artist"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/dj_experiment"
        style="@style/CategoryStyle"
        android:background="@color/category_dj_experiment"
        android:text="@string/dj_experiment"
        android:layout_marginBottom="5dp"/>

</LinearLayout>
</ScrollView>
